--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
             <div id=dellocal>
                 <a href="#dellocal" class=redFont><i class="icono-reset"></i></a>
             </div>
+            <div id=theme-toggle>
+                <i class="icono-eye"></i>
+            </div>
         </div>
         <!-- HEADER -->
 
@@ -90,7 +93,7 @@
                 <div class="profil_1">
                     <div class="name">
                         <label for="P_Name">Name</label>
-                        <input type="text" id="P_Name" name=Name>
+                        <input type="text" id="P_Name" name=Name value=ADXS>
                     </div>
                     <div class="password">
                         <label for="P_Password">Passwort</label>
